--- a/article.html
+++ b/article.html
@@ -8,7 +8,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link rel="stylesheet" href=style.css type="text/css">
+    <link rel="stylesheet" href=assets/style.css type="text/css">
     
    <style>
 
@@ -53,7 +53,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span> 
       </button>
-      <a class="navbar-brand" href="PandityaHub.html" style="padding-top: 0px;"><img src="images/Panditya.png"></a>
+      <a class="navbar-brand" href="index.html" style="padding-top: 0px;"><img src="images/Panditya.png"></a>
     </div>
       <div class="collapse navbar-collapse" id="myNavbar">
     <ul class="nav navbar-nav navbar-right">
@@ -73,7 +73,7 @@
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <h3 id="fo">Articles</h3>
                     <div class="pagenation-links text-right" style="border-bottom-style: solid; border-bottom-color: red; ">
-                        <a href="PandityaHub.html">Back</a>
+                        <a href="index.html">Back</a>
                         <i>/</i>
                          Articles
                     </div><br>
