--- a/article.html
+++ b/article.html
@@ -121,7 +121,7 @@
             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <article style="border-bottom-style: solid; border-bottom-color: red;">
                 <h2 style="text-decoration: underline">Makar Sankranti</h2>
-                <img src="images/makar.jpg" class="img-responsive">
+                <img src="makar.jpg" class="img-responsive">
                 <br>
                 <p>
                 Makar Sankranti is the only Hindu festival centered on the Solar calendar. According to the legend, Bhishma, the hero of Mahabharata waited for an auspicious time to give up his life. It is believed that a person dying on this day reaches the Eternal Bliss and the Abode of Light. Makar Sankranti is celebrated by taking dives in the Ganges and offering water to the Sun God.
@@ -134,7 +134,7 @@
             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <article style="border-bottom-style: solid; border-bottom-color: red;">
                 <h2 style="text-decoration: underline">Maha Shivaratri</h2>
-                <img src="images/mahashiv.jpg" class="img-responsive">
+                <img src="mahashiv.jpg" class="img-responsive">
                 <br>
                 <p>
                 Maha Shivratri, the great night of Shiva, is celebrated on the 14th day of the Margshirsh month. It commemorates the marriage of Lord Shiva and Goddess Parvati. People celebrate this festival by fasting and offering Bilva leaves to Lord Shiva. There is also a tradition of giving a holy bath to the ‘Shiva Lingam’.
