--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@
                                         <div class="image-holder">
                                             <div class="hover-box">
                                             </div>
-                                            <a href="pandits.html" class="text-deco-none">
+                                            <a href="#" class="text-deco-none">
                                                 <img src="images/pandit.jpg" alt style="width: 100%; height: 250px" class="img-responsive img-thumbnail">
                                             </a>
                                         </div>
                                         <div class="text-box-inner">
-                                            <center><h3  style="font-family: monospace"><a href="pandits.html" class="text-deco-none">Pandits</a></h3></center>
+                                            <center><h3  style="font-family: monospace"><a href="#" class="text-deco-none">Pandits</a></h3></center>
                                             <br>
                                         </div>
                                     </div>
