--- a/index.html
+++ b/index.html
@@ -181,12 +181,12 @@
                                         <div class="image-holder">
                                             <div class="hover-box">
                                             </div>
-                                            <a href="Kundli.html" class="text-deco-none">
+                                            <a href="kundli.html" class="text-deco-none">
                                                <img src="images/kundliimage.jpg" alt style="width: 100%; height: 250px" class="img-responsive img-thumbnail">
                                             </a>
                                         </div>
                                         <div class="text-box-inner">
-                                            <center><h3 style="font-family: monospace"><a href="Kundli.html" class="text-deco-none">Kundli</a></h3></center>
+                                            <center><h3 style="font-family: monospace"><a href="kundli.html" class="text-deco-none">Kundli</a></h3></center>
                                             <br>
                                         </div>
                                     </div>
