--- a/kundli.html
+++ b/kundli.html
@@ -8,7 +8,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link rel="stylesheet" href=style.css type="text/css">
+    <link rel="stylesheet" href=assets/style.css type="text/css">
     
    <style>
 
@@ -53,7 +53,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span> 
       </button>
-      <a class="navbar-brand" href="PandityaHub.html" style="padding-top: 0px;"><img src="images/Panditya.png"></a>
+      <a class="navbar-brand" href="index.html" style="padding-top: 0px;"><img src="images/Panditya.png"></a>
     </div>
       <div class="collapse navbar-collapse" id="myNavbar">
     <ul class="nav navbar-nav navbar-right">
@@ -72,7 +72,7 @@
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <h3 id="fo">Kundli</h3>
                     <div class="pagenation-links text-right" style="border-bottom-style: solid; border-bottom-color: red; ">
-                        <a href="PandityaHub.html">Back</a>
+                        <a href="index.html">Back</a>
                         <i>/</i>
                          Kundli
                     </div><br>
@@ -94,7 +94,7 @@
                 </tr>
             </thead>
                  <tr>
-                    <td>Sadwargi Janmapatrika</td>
+                    <td>Saptwargi Janmapatrika</td>
                     <td>501/-</td>
                 </tr>   
                 <tr>
@@ -118,7 +118,7 @@
                     <td>Contact</td>
                 </tr>
                 <tr>
-                    <td>Karkamsh Kundli</td>
+                    <td>Karkansh Kundli</td>
                     <td>Contact</td>
                 </tr>
                 <tr>
@@ -138,7 +138,7 @@
                     <td>501/-</td>
                 </tr>
              <tr>
-                    <td>Kundli Afalokam</td>
+                    <td>Kundli Avalokam</td>
                     <td>101/-</td>
                 </tr>
         </table>
@@ -150,12 +150,12 @@
     <br><br>
  <div class="footer" style="background-color : #154360 ;">
        <div class="wrapper pull-right col-lg-3 col-md-4 col-sm-4 col-xs-4">
-           <a class="demo" href="www.facebook.com">
+           <a class="demo" href="https://www.facebook.com/Panditya-Hob-263137541106113/">
                <span class="fa-stack fa-lg" style="margin: 2px;">
                    <i class="fa fa-facebook fa-stack-1x"></i>
                </span>
            </a>
-           <a class="demo" href="www.twitter.com">
+           <a class="demo" href="https://twitter.com/PandityaH?s=08">
                <span class="fa-stack fa-lg" style="margin: 2px;">
                    <i class="fa fa-twitter fa-stack-1x"></i>
                </span>
