--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span> 
       </button>
-      <a class="navbar-brand" href="PandityaHub.html" style="padding-top: 0px;"><img src="images/Panditya.png"></a>
+      <a class="navbar-brand" href="#" style="padding-top: 0px;"><img src="images/Panditya.png"></a>
     </div>
       <div class="collapse navbar-collapse" id="myNavbar">
     <ul class="nav navbar-nav navbar-right">
@@ -211,7 +211,7 @@
                    <i class="fa fa-facebook fa-stack-1x"></i>
                </span>
            </a>
-           <a class="demo" href="www.twitter.com">
+           <a class="demo" href="https://twitter.com/PandityaH?s=08">
                <span class="fa-stack fa-lg" style="margin: 2px;">
                    <i class="fa fa-twitter fa-stack-1x"></i>
                </span>
