--- a/Photos_videos.html
+++ b/Photos_videos.html
@@ -20,7 +20,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span> 
       </button>
-      <a class="navbar-brand" href="PandityaHub.html" style="padding-top: 0px;"><img src="images/Panditya.png"></a>
+      <a class="navbar-brand" href="index.html" style="padding-top: 0px;"><img src="images/Panditya.png"></a>
     </div>
       <div class="collapse navbar-collapse" id="myNavbar">
     <ul class="nav navbar-nav navbar-right">
@@ -39,7 +39,7 @@
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <h3 id="fo">Photos & Videos</h3>
                     <div class="pagenation-links text-right" style="border-bottom-style: solid; border-bottom-color: red; ">
-                        <a href="PandityaHub.html">Back</a>
+                        <a href="index.html">Back</a>
                         <i>/</i>
                          Photos & Videos
                     </div><br>
