--- a/photos.html
+++ b/photos.html
@@ -88,6 +88,27 @@
     <li data-target="#myCarousel" data-slide-to="5"></li>
     <li data-target="#myCarousel" data-slide-to="6"></li>
     <li data-target="#myCarousel" data-slide-to="7"></li>
+    <li data-target="#myCarousel" data-slide-to="8"></li>
+    <li data-target="#myCarousel" data-slide-to="9"></li>
+    <li data-target="#myCarousel" data-slide-to="10"></li>
+    <li data-target="#myCarousel" data-slide-to="11"></li>
+    <li data-target="#myCarousel" data-slide-to="12"></li>
+    <li data-target="#myCarousel" data-slide-to="13"></li>
+    <li data-target="#myCarousel" data-slide-to="14"></li>
+    <li data-target="#myCarousel" data-slide-to="15"></li>
+    <li data-target="#myCarousel" data-slide-to="16"></li>
+    <li data-target="#myCarousel" data-slide-to="17"></li>
+    <li data-target="#myCarousel" data-slide-to="18"></li>
+    <li data-target="#myCarousel" data-slide-to="19"></li>
+    <li data-target="#myCarousel" data-slide-to="20"></li>
+    <li data-target="#myCarousel" data-slide-to="21"></li>
+    <li data-target="#myCarousel" data-slide-to="22"></li>
+    <li data-target="#myCarousel" data-slide-to="23"></li>
+    <li data-target="#myCarousel" data-slide-to="24"></li>
+    <li data-target="#myCarousel" data-slide-to="25"></li>
+    <li data-target="#myCarousel" data-slide-to="26"></li>
+    <li data-target="#myCarousel" data-slide-to="27"></li>
+    <li data-target="#myCarousel" data-slide-to="28"></li>
   </ol>
 
   <!-- Wrapper for slides -->
@@ -96,14 +117,14 @@
       <img src="images/c1.jpg" alt="image 1">
     </div>
 
-    <div class="item">
+    <div class="item active">
       <img src="images/c2.jpg" alt="image 2">
     </div>
       <div class="item active">
       <img src="images/c3.jpg" alt="image 3">
     </div>
 
-    <div class="item">
+    <div class="item active">
       <img src="images/c4.jpg" alt="image 4">
     </div>
       <div class="item active">
