--- a/photos.html
+++ b/photos.html
@@ -109,6 +109,8 @@
     <li data-target="#myCarousel" data-slide-to="26"></li>
     <li data-target="#myCarousel" data-slide-to="27"></li>
     <li data-target="#myCarousel" data-slide-to="28"></li>
+    <li data-target="#myCarousel" data-slide-to="29"></li>
+    <li data-target="#myCarousel" data-slide-to="30"></li>
   </ol>
 
   <!-- Wrapper for slides -->
@@ -140,6 +142,72 @@
 
     <div class="item">
       <img src="images/c8.jpg" alt="image 8">
+    </div>
+    <div class="item active">
+      <img src="c9.jpg" alt="image 1">
+    </div>
+    <div class="item active">
+      <img src="c10.jpg" alt="image 1">
+    </div>
+    <div class="item active">
+      <img src="c11.jpg" alt="image 1">
+    </div>
+    <div class="item active">
+      <img src="c12.jpg" alt="image 1">
+    </div>
+    <div class="item active">
+      <img src="c13.jpg" alt="image 1">
+    </div>
+    <div class="item active">
+      <img src="c14.jpg" alt="image 1">
+    </div>
+    <div class="item active">
+      <img src="c15.jpg" alt="image 1">
+    </div>
+    <div class="item active">
+      <img src="c16.jpg" alt="image 1">
+    </div>
+    <div class="item active">
+      <img src="c17.jpg" alt="image 1">
+    </div>
+    <div class="item active">
+      <img src="c18.jpg" alt="image 1">
+    </div>
+    <div class="item active">
+      <img src="c19.jpg" alt="image 1">
+    </div>
+    <div class="item active">
+      <img src="c20.jpg" alt="image 1">
+    </div>
+    <div class="item active">
+      <img src="c21.jpg" alt="image 1">
+    </div>
+    <div class="item active">
+      <img src="c22.jpg" alt="image 1">
+    </div>
+    <div class="item active">
+      <img src="c23.jpg" alt="image 1">
+    </div>
+    <div class="item active">
+      <img src="c24.jpg" alt="image 1">
+    </div>
+    <div class="item active">
+      <img src="c25.jpg" alt="image 1">
+    </div>
+    <div class="item active">
+      <img src="c26.jpg" alt="image 1">
+    </div>
+    <div class="item active">
+      <img src="c27.jpg" alt="image 1">
+    </div>
+    <div class="item active">
+      <img src="c28.jpg" alt="image 1">
+    </div>
+    <div class="item active">
+      <img src="c29.jpg" alt="image 1">
+    </div>
+    <div class="item active">
+      <img src="c30.jpg" alt="image 1">
     </div>
   </div>
 
