--- a/photos.html
+++ b/photos.html
@@ -119,94 +119,94 @@
       <img src="images/c1.jpg" alt="image 1">
     </div>
 
-    <div class="item active">
+    <div class="item ">
       <img src="images/c2.jpg" alt="image 2">
     </div>
-      <div class="item active">
+      <div class="item">
       <img src="images/c3.jpg" alt="image 3">
     </div>
 
-    <div class="item active">
+    <div class="item">
       <img src="images/c4.jpg" alt="image 4">
     </div>
-      <div class="item active">
+      <div class="item">
       <img src="images/c5.jpg" alt="image 5">
     </div>
 
     <div class="item">
       <img src="images/c6.jpg" alt="image 6">
     </div>
-      <div class="item active">
+      <div class="item">
       <img src="images/c7.jpg" alt="image 7">
     </div>
 
     <div class="item">
       <img src="images/c8.jpg" alt="image 8">
     </div>
-    <div class="item active">
+    <div class="item ">
       <img src="c9.jpg" alt="image 1">
     </div>
-    <div class="item active">
+    <div class="item ">
       <img src="c10.jpg" alt="image 1">
     </div>
-    <div class="item active">
+    <div class="item ">
       <img src="c11.jpg" alt="image 1">
     </div>
-    <div class="item active">
+    <div class="item ">
       <img src="c12.jpg" alt="image 1">
     </div>
-    <div class="item active">
+    <div class="item ">
       <img src="c13.jpg" alt="image 1">
     </div>
-    <div class="item active">
+    <div class="item ">
       <img src="c14.jpg" alt="image 1">
     </div>
-    <div class="item active">
+    <div class="item ">
       <img src="c15.jpg" alt="image 1">
     </div>
-    <div class="item active">
+    <div class="item ">
       <img src="c16.jpg" alt="image 1">
     </div>
-    <div class="item active">
+    <div class="item ">
       <img src="c17.jpg" alt="image 1">
     </div>
-    <div class="item active">
+    <div class="item ">
       <img src="c18.jpg" alt="image 1">
     </div>
-    <div class="item active">
+    <div class="item ">
       <img src="c19.jpg" alt="image 1">
     </div>
-    <div class="item active">
+    <div class="item ">
       <img src="c20.jpg" alt="image 1">
     </div>
-    <div class="item active">
+    <div class="item ">
       <img src="c21.jpg" alt="image 1">
     </div>
-    <div class="item active">
+    <div class="item ">
       <img src="c22.jpg" alt="image 1">
     </div>
-    <div class="item active">
+    <div class="item ">
       <img src="c23.jpg" alt="image 1">
     </div>
-    <div class="item active">
+    <div class="item ">
       <img src="c24.jpg" alt="image 1">
     </div>
-    <div class="item active">
+    <div class="item ">
       <img src="c25.jpg" alt="image 1">
     </div>
-    <div class="item active">
+    <div class="item ">
       <img src="c26.jpg" alt="image 1">
     </div>
-    <div class="item active">
+    <div class="item ">
       <img src="c27.jpg" alt="image 1">
     </div>
-    <div class="item active">
+    <div class="item ">
       <img src="c28.jpg" alt="image 1">
     </div>
-    <div class="item active">
+    <div class="item ">
       <img src="c29.jpg" alt="image 1">
     </div>
-    <div class="item active">
+    <div class="item ">
       <img src="c30.jpg" alt="image 1">
     </div>
   </div>
