--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <img src="images/carousal1.jpeg" alt="image 1">
+      <img src="images/carousal1.jpeg" style="height: 80%;" alt="image 1">
     </div>
 
     <div class="item">
-      <img src="images/carousal2.jpg" alt="image 2">
+      <img src="images/carousal2.jpg" style="height: 80%;" alt="image 2">
     </div>
       
     <div class="item">
-      <img src="images/carousal3.jpg" alt="image 3">
+      <img src="images/carousal3.jpg" style="height: 80%;" alt="image 3">
     </div>  
   </div>
 
