--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </nav>
     <br><br><br>
     <center>
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
+<div id="myCarousel" style="height: 80%;" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
