--- a/article.html
+++ b/article.html
@@ -86,6 +86,21 @@
         <div class="row">
             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <article style="border-bottom-style: solid; border-bottom-color: red;">
+                    <h2 style="text-decoration: underline">“अनुसूइया के सामने क्यों बने त्रिदेव बालक”</h2>
+                    <img src=".jpg" class="img-responsive">
+                    <br>
+                    <p>
+                    सती अनुसूइया महर्षि अत्री की पत्नी थी। जो अपने पतिव्रता धर्म के कारण सुविख्यात थी। एक दिन देव ऋषि नारद जी बारी-बारी से विष्णुजी, शिव जी और ब्रह्मा जी की अनुपस्थिति में विष्णु लोक, शिवलोक तथा ब्रह्मलोक पहुंचे। वहां जाकर उन्होंने लक्ष्मी जी, पार्वती जी और सावित्री जी के सामने अनुसुइया के पतिव्रत धर्म की बढ़ चढ़ के प्रशंसा की तथा कहां की समस्त सृष्टि में उससे बढ़ कर कोई पतिव्रता नहीं है। नारद जी की बाते सुनकर तीनो देवियां सोचने लगी की आखिर अनुसुइया के पतिव्रता धर्म में ऐसी क्या बात है जो उसकी चर्चा स्वर्गलोक तक हो रही है? तीनों देवीयों को अनुसुइया से ईर्ष्या होने लगी।
+नारद जी के वहां से चले जाने के बाद सावित्री, लक्ष्मी तथा पार्वती एक जगह इक्ट्ठी हुई तथा अनुसूइया के पतिव्रता धर्म को खंडित कराने के बारे में सोचने लगी। उन्होंने निश्चय किया की हम अपने पतियों को वहां भेज कर अनुसूईया का पतिव्रता धर्म खंडित कराएंगे। ब्रह्मा, विष्णु और शिव जब अपने अपने स्थान पर पहुंचे तो तीनों देवियों ने उनसे अनुसूइया का पतिव्रता धर्म खंडित कराने की जिद्द की। तीनों देवों ने बहुत समझाया कि यह पाप हमसे मत करवाओ। परंतु तीनों देवियों ने उनकी एक ना सुनी और अंत में तीनो देवो को इसके लिए राज़ी होना पड़ा।
+तीनों देवो ने साधु वेश धारण किया तथा अत्रि ऋषि के आश्रम पर पहुंचे। उस समय अनुसूइया जी आश्रम पर अकेली थी। साधुवेश में तीन अत्तिथियों को द्वार पर देख कर अनुसूइया ने भोजन ग्रहण करने का आग्रह किया। तीनों साधुओं ने कहा कि हम आपका भोजन अवश्य ग्रहण करेंगे। परंतु एक शर्त पर कि आप हमे निवस्त्र होकर भोजन कराओगी। अनुसूइया ने साधुओं के श्राप के भय से तथा अतिथि सेवा से वंचित रहने के पाप के भय से परमात्मा से प्रार्थना की कि हे परमेश्वर ! इन तीनों को छः-छः महीने के बच्चे की आयु के शिशु बनाओ। जिससे मेरा पतिव्रत धर्म भी खण्ड न हो तथा साधुओं को आहार भी प्राप्त हो व अतिथि सेवा न करने का पाप भी न लगे। परमेश्वर की कृपा से तीनों देवता छः-छः महीने के बच्चे बन गए तथा अनुसूइया ने तीनों को निवस्त्र होकर दूध पिलाया तथा पालने में लेटा दिया।
+जब तीनों देव अपने स्थान पर नहीं लौटे तो देवियां व्याकुल हो गईं। तब नारद ने वहां आकर सारी बात बताई की तीनो देवो को तो अनुसुइया ने अपने सतीत्व से बालक बना दिया है। यह सुनकर तीनों देवियां ने अत्रि ऋषि के आश्रम पर पहुंचकर माता अनुसुइया से माफ़ी मांगी और कहां की हमसे ईर्ष्यावश यह गलती हुई है। इनके लाख मना करने पर भी हमने इन्हे यह घृणित कार्य करने भेजा। कृप्या आप इन्हें पुनः उसी अवस्था में कीजिए। आपकी हम आभारी होंगी। इतना सुनकर अत्री ऋषि की पत्नी अनुसूइया ने तीनो बालक को वापस उनके वास्तविक रूप में ला दिया।अत्री ऋषि व अनुसूइया से तीनों भगवानों ने वर मांगने को कहा। तब अनुसूइया ने कहा कि आप तीनों हमारे घर बालक बन कर पुत्र रूप में आएं। हम निसंतान है। तीनों भगवानों ने तथास्तु कहा तथा अपनी-अपनी पत्नियों के साथ अपने-अपने लोक को प्रस्थान कर गए। कालान्तर में दतात्रोय रूप में भगवान विष्णु का, चन्द्रमा के रूप में ब्रह्मा का तथा दुर्वासा के रूप में भगवान शिव का जन्म अनुसूइया के गर्भ से हुआ।
+                  </p>
+                </article>
+            </div>
+            <br><br>
+           <div class="row">
+            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <article style="border-bottom-style: solid; border-bottom-color: red;">
                     <h2 style="text-decoration: underline">Diwali</h2>
                     <img src="images/diwali.jpg" class="img-responsive">
                     <br>
