--- a/article.html
+++ b/article.html
@@ -87,7 +87,7 @@
             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <article style="border-bottom-style: solid; border-bottom-color: red;">
                     <h2 style="text-decoration: underline">“अनुसूइया के सामने क्यों बने त्रिदेव बालक”</h2>
-                    <img src=".jpg" class="img-responsive">
+                    <img src="trimurthi.jpg" class="img-responsive">
                     <br>
                     <p>
                     सती अनुसूइया महर्षि अत्री की पत्नी थी। जो अपने पतिव्रता धर्म के कारण सुविख्यात थी। एक दिन देव ऋषि नारद जी बारी-बारी से विष्णुजी, शिव जी और ब्रह्मा जी की अनुपस्थिति में विष्णु लोक, शिवलोक तथा ब्रह्मलोक पहुंचे। वहां जाकर उन्होंने लक्ष्मी जी, पार्वती जी और सावित्री जी के सामने अनुसुइया के पतिव्रत धर्म की बढ़ चढ़ के प्रशंसा की तथा कहां की समस्त सृष्टि में उससे बढ़ कर कोई पतिव्रता नहीं है। नारद जी की बाते सुनकर तीनो देवियां सोचने लगी की आखिर अनुसुइया के पतिव्रता धर्म में ऐसी क्या बात है जो उसकी चर्चा स्वर्गलोक तक हो रही है? तीनों देवीयों को अनुसुइया से ईर्ष्या होने लगी।
