--- a/article.html
+++ b/article.html
@@ -174,7 +174,7 @@
                 </article>
             </div>
         </div>
-    </div>
+      </div></div>
  <div class="footer" style="background-color : #154360 ;">
        <div class="wrapper pull-right col-lg-3 col-md-4 col-sm-4 col-xs-4">
            <a class="demo" href="www.facebook.com">
