--- a/about_us.html
+++ b/about_us.html
@@ -45,7 +45,7 @@
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <h3 id="fo">About</h3>
                     <div class="pagenation-links text-right" style="border-bottom-style: solid; border-bottom-color: red; ">
-                        <a href="PandityaHub.html">Back</a>
+                        <a href="index.html">Back</a>
                         <i>/</i>
                          About
                     </div><br>
