--- a/kundli.html
+++ b/kundli.html
@@ -95,7 +95,7 @@
             </thead>
                  <tr>
                     <td>Saptwargi Janmapatrika</td>
-                    <td>501/-</td>
+                    <td>1100/-</td>
                 </tr>   
                 <tr>
                     <td>Janmapatrika</td>
@@ -138,8 +138,8 @@
                     <td>501/-</td>
                 </tr>
              <tr>
-                    <td>Kundli Avalokam</td>
-                    <td>101/-</td>
+                    <td>Kundli Avalokan</td>
+                    <td>501/-</td>
                 </tr>
         </table>
     </div>
