--- a/contact_us.html
+++ b/contact_us.html
@@ -42,8 +42,8 @@
                             <div class="inner-contact">
                                 <span><i class="fa fa-mobile fa-5x" aria-hidden="true"></i></span>
                                 <h3>Phone</h3>
-                                <p>8850383676</p>
-                                <p>9481859354</p>
+                              <p><a href = "tel : +91-8850383676">8850383676</a></p>
+                              <p><a href = "tel : +91-9481859354">9481859354</a></p>
                             </div>
                         </div>
                     </div><br><br>
