--- a/contact_us.html
+++ b/contact_us.html
@@ -52,7 +52,7 @@
                             <div class="inner-contact">
                                 <span><i class="fa fa-whatsapp fa-4x" aria-hidden="true"></i></span>
                                 <h3>WhatsApp</h3>
-                                <p>9481859354</p>
+                                <a href ="https://api.whatsapp.com/send?phone=919481859354&text=Namaskar%20&source=&data="<p>9481859354</p></a>
                             </div>
                         </div>
                     </div><br><br>
