--- a/contact_us.html
+++ b/contact_us.html
@@ -50,7 +50,8 @@
                     <div class="row">
                         <div class="contact col-lg-12 col-sm-12 col-xs-12">
                             <div class="inner-contact">
-                                <span><i class="fa fa-whatsapp fa-4x" aria-hidden="true"></i></span>
+                                <a href ="https://api.whatsapp.com/send?phone=919481859354&text=Namaskar%20&source=&data=">
+                                <span><i class="fa fa-whatsapp fa-4x" aria-hidden="true"></i></span></a>
                                 <h3>WhatsApp</h3>
                                 <a href ="https://api.whatsapp.com/send?phone=919481859354&text=Namaskar%20&source=&data="<p>9481859354</p></a>
                             </div>
