--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href=assets/style.css type="text/css">
   <style>
     body{
-      background-image: url(bg.jpg);
+      background-image: ;
     }
   </style>
 </head>
