--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </nav>
     <br><br><br>
     <center>
-<div id="myCarousel" class="carousel slide" data-ride="carousel" style="max-height: 500px !important">
+<div id="myCarousel" class="carousel slide" data-ride="carousel" style="width: 100%; height: 300px; ">
   <!-- Indicators -->
   <ol class="carousel-indicators">
     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
