--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     body{
       background-image: ;
     }
+    #myCarousel{
+      height: 300 px; !important
+      width: 100%;  !important
+    }
   </style>
 </head>
 <body>
