--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
       background-image: ;
     }
     #myCarousel{
-      height: 300 px; !important
+      height: 400 px; !important
+      width: 100%;  !important
+    }
+    .carousel-inner{
+      height: 400 px; !important
       width: 100%;  !important
     }
   </style>
