--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       height: 400 px; !important
       width: 100%;  !important
     }
-    .carousel-inner{
+    .carousel-inner, .item, .item-active{
       height: 400 px; !important
       width: 100%;  !important
     }
