--- a/index.html
+++ b/index.html
@@ -46,20 +46,22 @@
     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
     <li data-target="#myCarousel" data-slide-to="1"></li>
     <li data-target="#myCarousel" data-slide-to="2"></li>
+    <li data-target="#myCarousel" data-slide-to="3"></li>
+    <li data-target="#myCarousel" data-slide-to="4"></li>
   </ol>
 
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <img src="images/carousal1.jpeg" alt="image 1">
+      <img src="caro3.jpg" alt="image 1">
     </div>
 
     <div class="item">
-      <img src="images/carousal2.jpg" alt="image 2">
+      <img src="caro4.jpg" alt="image 2">
     </div>
       
     <div class="item">
-      <img src="images/carousal3.jpg" alt="image 3">
+      <img src="caro5.jpg" alt="image 3">
     </div>
     
     <div class="item">
