--- a/video.html
+++ b/video.html
@@ -31,6 +31,9 @@
   background: #dd4b39;
   color: white;
 }
+     .fa-youtube{
+      hover: #ff0000 ;
+     }
        th, thead, td{
            border-style: solid;
            border-color: black;
