--- a/video.html
+++ b/video.html
@@ -32,7 +32,7 @@
   color: white;
 }
      .fa-youtube{
-      hover: #ff0000 ;
+      hover: #ff0000 ; !important
      }
        th, thead, td{
            border-style: solid;
