--- a/index.html
+++ b/index.html
@@ -261,8 +261,8 @@
         <h4><span>Copyright © 2018 PandityaHub.</span></h4>
         <h3><span>ALL RIGHTS RESERVED.</span></h3>
        </div>
-       <a href="#top" id="id1" title="To Top">
-    <span id="myBtn" class="glyphicon glyphicon-chevron-up"> Top</span>
+     <button id="myBtn"><a href="#top" id="id1" title="To Top"></button>
+    <span class="glyphicon glyphicon-chevron-up"> Top</span>
   </a>
        </div>
 </body>
