--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                                             </a>
                                         </div>
                                         <div class="text-box-inner">
-                                            <center><h3  style="font-family: monospace"><a href="Puja.html" class="text-deco-none">Pujas</a></h3></center>
+                                            <center><h3  style="font-family: monospace"><a href="pooja.html" class="text-deco-none">Pujas</a></h3></center>
                                             <br>
                                         </div>
                                     </div>
@@ -202,7 +202,7 @@
                                             </a>
                                         </div>
                                         <div class="text-box-inner">
-                                            <center><h3  style="font-family: monospace"><a href="Article.html" class="text-deco-none">Articles</a></h3></center>
+                                            <center><h3  style="font-family: monospace"><a href="article.html" class="text-deco-none">Articles</a></h3></center>
                                             <br>
                                         </div>
                                     </div>
